--- a/index.html
+++ b/index.html
@@ -36,6 +36,27 @@
 
     <main>
 
+    <section class="puntosDiferenciaPros">
+
+        <section id="diferencia1">
+            <h3>Track company-wide progress</h3>
+            <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor. </p>
+        </section>
+
+        <section id="diferencia2">
+            <h3>Advance built-in reports</h3>
+            <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor. </p>
+        </section>
+
+        <section id="diferencia3">
+            <h3>Everything you need in one place</h3>
+            <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor. </p>
+        </section>
+        
+    </section>
+
+
+
     </main>
 
 
