--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
     <header>
         <img src="imagenes/logo.svg" alt="">
         <nav>
-            <li>
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
-                <ul></ul>
-            </li>
-
+            <ul class="navbar">
+                <li><a href="#">Sports</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Trainning</a></li>
+            </ul>
+            <button>Contact</button>
 
 
 
