--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Trainning</a></li>
             </ul>
-            <button>Contact</button>
-
-
-
+            <button>Contact</buttonn>
         </nav>
-
-
-
-
     </header>
 
+    <div class="section">
+        <img src="imagenes/padel-intro.png" alt="">
+        <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
+        <h3>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</h3>
+        <button class="button">Contact</button>
+    </div>
 
 
     <main>
