--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         <button class="button">Contact</button>
     </div>
 
-
-    <main>
+        <main>
+            <h1>What´s different between pros?</h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</h3>
+        </main>
 
     <section class="puntosDiferenciaPros">
 
