--- a/index.html
+++ b/index.html
@@ -25,17 +25,21 @@
 
     <main>
 
-        <section class="section1">
+        <section class="afterHeader">
             <img src="imagenes/padel-intro.png" alt="">
-            <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
-            <h3>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</h3>
-            <button class="button">Contact</button>
+            <div>
+                <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
+                <h3>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!</h3>
+                <button class="button">Contact</button>
+            </div>
         </section>
-        <section>
-            <h1>What´s different between pros?</h1>
+       
+        <section class="cualesSonDiferencias">
+            <h1>What's different between pros?</h1>
             <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales.
             In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</h3>
         </section>
+        
         <section class="puntosDiferenciaPros">
             <section class="diferencias">
                 <div class="numero">1</div>
