Terminando el footer

--- a/index.html
+++ b/index.html
@@ -106,10 +106,34 @@
 
 
     <footer>
+        <form id="emailForm" action="">
+            <input type="email" name="mail" id="mail" placeholder="Update in your inbox...">
+            <button type="submit" id="submitButton">Go</button>
+        </form>
+       
+        <ul class="navbar">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Sports</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Trainning</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+        </ul>
 
 
+        <div class="redes">
+            <img id="icon-facebook" src="imagenes/icon-facebook.svg" alt="">
+            <img id="icon-youtube" src="imagenes/icon-youtube.svg" alt="">
+            <img id="icon-twitter" src="imagenes/icon-twitter.svg" alt="">
+            <img id="icon-pinterest"src="imagenes/icon-pinterest.svg" alt="">
+            <img id="icon-instagram" src="imagenes/icon-instagram.svg" alt="">
+        </div>
 
+        <img src="/imagenes/logo.svg" alt="">
 
+        <p>Copyright 2020. All Rights Reserved</p>
 
 
 
