--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             </ul>
             <button>Contact</buttonn>
         </nav>
+        <img src="imagenes/icon-hamburger.svg" alt=""
+
     </header>
 
 
