--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
     <header>
         <img src="imagenes/logo.svg" alt="">
         <nav>
@@ -18,12 +19,10 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Trainning</a></li>
             </ul>
-            <button>Contact</buttonn>
         </nav>
-        <img src="imagenes/icon-hamburger.svg" alt=""
-
+        <button>Contact</button>
+        <img src="imagenes/icon-hamburger.svg" alt="">
     </header>
-
 
     <main>
 
