ajustando imagen body2

--- a/index.html
+++ b/index.html
@@ -30,17 +30,14 @@
             <img src="imagenes/padel-intro.png" alt="">
             <div>
                 <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
-                <h3>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action!
-                </h3>
+                <h3>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action! </h3>
                 <button class="button">Contact</button>
             </div>
         </section>
 
         <section class="cualesSonDiferencias">
-            <h1>What's different between pros?</h1>
-            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet
-                sodales.
-                In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</h3>
+            <h2>What's different between pros?</h2>
+            <h3> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae accusamus fuga enim adipisci quae delectus, explicabo, nemo sapiente incidunt inventore quaerat illo nobis odit veritatis dignissimos hic nesciunt quam?</h3>
         </section>
 
         <section class="puntosDiferenciaPros">
@@ -48,9 +45,7 @@
                 <div class="numero">1</div>
                 <div class="contenido">
                     <h3>Track company-wide progress</h3>
-                    <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus
-                        pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                        consequat dolor. </p>
+                    <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor. </p>
                 </div>
             </section>
 
@@ -58,9 +53,7 @@
                 <div class="numero">2</div>
                 <div class="contenido">
                     <h3>Advance built-in reports</h3>
-                    <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus
-                        pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                        consequat dolor. </p>
+                    <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor. </p>
                 </div>
             </section>
 
@@ -68,9 +61,7 @@
                 <div class="numero">3</div>
                 <div class="contenido">
                     <h3>Everything you need in one place</h3>
-                    <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus
-                        pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget,
-                        consequat dolor. </p>
+                    <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor. </p>
                 </div>
             </section>
         </section>
@@ -81,20 +72,17 @@
             <section class="cardJugador">
                 <img src="/imagenes/avatar-sanyo.png" alt="Avatar Sanyo">
                 <p class="nombreJugador">Sanyo</p>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu
-                    neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
             <section class="cardJugador">
                 <img src="/imagenes/avatar.lebron.png" alt="">
                 <p class="nombreJugador">Lebro</p>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu
-                    neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
             <section class="cardJugador">
                 <img src="/imagenes/avatar-navarro.png" alt="">
                 <p class="nombreJugador">Navarro</p>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu
-                    neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
 
             <button>More</button>
