--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <img class="logo" src="imagenes/logo.svg" alt="">
+        <img src="imagenes/logo.svg" alt="">
         <nav>
             <ul class="navbar">
                 <li><a href="#">Sports</a></li>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <button>Contact</button>
-        <img class="hamburger" src="imagenes/icon-hamburger.svg" alt="">
+        <img src="imagenes/icon-hamburger.svg" alt="">
     </header>
 
     <main>
