--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 
@@ -70,17 +70,17 @@
             <h2>Best Of the Month</h2>
 
             <section class="cardJugador">
-                <img src="/imagenes/avatar-sanyo.png" alt="Avatar Sanyo">
+                <img src="imagenes/avatar-sanyo.png" alt="Avatar Sanyo">
                 <p class="nombreJugador">Sanyo</p>
                 <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
             <section class="cardJugador">
-                <img src="/imagenes/avatar.lebron.png" alt="">
+                <img src="imagenes/avatar.lebron.png" alt="">
                 <p class="nombreJugador">Lebro</p>
                 <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
             <section class="cardJugador">
-                <img src="/imagenes/avatar-navarro.png" alt="">
+                <img src="imagenes/avatar-navarro.png" alt="">
                 <p class="nombreJugador">Navarro</p>
                 <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
