Terminado css mobile de la parte de arriba y arreglado el numero

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Trainning</a></li>
             </ul>
         </nav>
-        <button>Contact</button>
+        <button class="btn-contact">Contact</button>
         <img class="hamburger" src="imagenes/icon-hamburger.png" alt="">
     </header>
 
@@ -31,35 +31,35 @@
             <div>
                 <h1>LIVE: Follow the Telcel Huawei Mexico Open 2022 for free </h1>
                 <h3>The final Open of the 2022 World Padel Tour season is underway, don't miss out on any of the action! </h3>
-                <button class="button">Contact</button>
+                <button class="btn-contact">Contact</button>
             </div>
         </section>
 
         <section class="cualesSonDiferencias">
             <h2>What's different between pros?</h2>
-            <h3> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae accusamus fuga enim adipisci quae delectus, explicabo, nemo sapiente incidunt inventore quaerat illo nobis odit veritatis dignissimos hic nesciunt quam?</h3>
+            <h3> Manage provides all the functionality your <br> teas needs, without the complexity. Our software is <br> tailor-made for modern digital product teams</h3>
         </section>
 
         <section class="puntosDiferenciaPros">
             <section class="diferencias">
-                <div class="numero">1</div>
                 <div class="contenido">
+                    <div class="numero">01</div>
                     <h3>Track company-wide progress</h3>
                     <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor. </p>
                 </div>
             </section>
 
             <section class="diferencias">
-                <div class="numero">2</div>
                 <div class="contenido">
+                    <div class="numero">02</div>
                     <h3>Advance built-in reports</h3>
                     <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor. </p>
                 </div>
             </section>
 
             <section class="diferencias">
-                <div class="numero">3</div>
                 <div class="contenido">
+                    <div class="numero">03</div>
                     <h3>Everything you need in one place</h3>
                     <p>Donec elit est, mattis lacinia arcu eu, efficitur consequat augue. Nam tellus sem, tempus pellentesque egestas vitae, efficitur vel nulla. Etiam vel orci rutrum, placerat quam eget, consequat dolor. </p>
                 </div>
@@ -85,12 +85,12 @@
                 <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
 
-            <button>More</button>
+            <button class="btn-contact">More</button>
         </section>
 
         <section class="beforeFooter">
             <h2>Get to know the best teams of the year</h2>
-            <button>Go for it</button>
+            <button class="btn-goforit">Go for it</button>
         </section>
     </main>
 
@@ -99,7 +99,7 @@
     <footer>
         <form id="emailForm" action="">
             <input type="email" name="mail" id="mail" placeholder="Update in your inbox...">
-            <button type="submit" id="submitButton">Go</button>
+            <button type="submit" id="submitButton" class="btn-go">Go</button>
         </form>
 
         <ul class="navbar">
