--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </section>
             <section class="cardJugador">
                 <img src="imagenes/avatar.lebron.png" alt="">
-                <p class="nombreJugador">Lebro</p>
+                <p class="nombreJugador">Lebron</p>
                 <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
             <section class="cardJugador">
@@ -95,23 +95,27 @@
     </main>
 
 
-
     <footer>
+        <div class="footer-container">
         <form id="emailForm" action="">
             <input type="email" name="mail" id="mail" placeholder="Update in your inbox...">
             <button type="submit" id="submitButton" class="btn-go">Go</button>
         </form>
 
-        <ul class="navbar">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Sports</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Trainning</a></li>
-            <li><a href="#">Community</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-        </ul>
+        <div class="navbar">
+            <ul class="left-column">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Sports</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About Us</a></li>
+            </ul>
+            <ul class="right-column">
+                <li><a href="#">Training</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+            </ul>
+        </div>
 
 
         <div class="redes">
@@ -122,10 +126,9 @@
             <img id="icon-instagram" src="imagenes/icon-instagram.svg" alt="">
         </div>
 
-        <img src="/imagenes/logo.svg" alt="">
+        <img src="imagenes/logo.svg" alt="logo">
 
-        <p>Copyright 2020. All Rights Reserved</p>
-
+        <p class="copyright">Copyright 2020. All Rights Reserved</p>
 
 
     </footer>
