--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
     </main>
 
 
-    <footer>
-        <div class="footer-container">
+    <footer class="footer-container">
+        
         <form id="emailForm" action="">
             <input type="email" name="mail" id="mail" placeholder="Update in your inbox...">
             <button type="submit" id="submitButton" class="btn-go">Go</button>
         </form>
 
-        <div class="navbar">
+        <div class="footernav">
             <ul class="left-column">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Pricing</a></li>
