Uso del white text

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
         </section>
 
         <section class="beforeFooter">
-            <h2>Get to know the best teams of the year</h2>
+            <h2>Get to know the 
+                best 
+                teams of the
+                year</h2>
             <button class="btn-goforit">Go for it</button>
         </section>
     </main>
