fotito de lebron chetita

--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
             <section class="cardJugador">
                 <img src="imagenes/avatar-sanyo.png" alt="Avatar Sanyo">
                 <p class="nombreJugador">Sanyo</p>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                <p class="textoJugador">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
             <section class="cardJugador">
                 <img src="imagenes/avatar.lebron.png" alt="">
                 <p class="nombreJugador">Lebron</p>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                <p class="textoJugador">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
             <section class="cardJugador">
                 <img src="imagenes/avatar-navarro.png" alt="">
                 <p class="nombreJugador">Navarro</p>
-                <p>Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                <p class="textoJugador">Etiam fermentum, nulla eget gravida cursus, purus lectus feugiat mauris, ut suscipit massa ipsum eu neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
             </section>
 
             <button class="btn-contact">More</button>
