primera parte de pc

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <header>
         <img src="imagenes/logo.svg" alt="">
         <nav>
-            <ul class="navbar">
+            <ul>
                 <li><a href="#">Sports</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Trainning</a></li>
+                <li><a href="#">Community</a></li>
             </ul>
         </nav>
         <button class="btn-contact">Contact</button>
@@ -37,7 +38,10 @@
 
         <section class="cualesSonDiferencias">
             <h2>What's different between pros?</h2>
-            <h3> Manage provides all the functionality your <br> teas needs, without the complexity. Our software is <br> tailor-made for modern digital product teams</h3>
+            <h3> Manage provides all the functionality your
+                teas needs, without the complexity. Our software is
+                tailor-made for modern digital product teams</h3>
+            <h3> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas aliquet consequat purus sit amet sodales. In faucibus ut nisi eu dignissim. Vestibulum fringilla velit sed tincidunt tincidunt.</h3>
         </section>
 
         <section class="puntosDiferenciaPros">
