--- a/index.html
+++ b/index.html
@@ -93,10 +93,7 @@
         </section>
 
         <section class="beforeFooter">
-            <h2>Get to know the 
-                best 
-                teams of the
-                year</h2>
+            <h2>Get to know the best teams of the year</h2> 
             <button class="btn-goforit">Go for it</button>
         </section>
     </main>
@@ -133,7 +130,7 @@
             <img id="icon-instagram" src="imagenes/icon-instagram.svg" alt="">
         </div>
 
-        <img src="imagenes/logo.svg" alt="logo">
+        <img src="imagenes/logo.svg" alt="logofooter">
 
         <p class="copyright">Copyright 2020. All Rights Reserved</p>
 
