termiando SIN DETALLES

--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
         </section>
 
         <section class="beforeFooter">
-            <h2>Get to know the best teams of the year</h2> 
+            <h2>Get to know the
+                best
+                teams of the 
+                year</h2> 
             <button class="btn-goforit">Go for it</button>
         </section>
     </main>
@@ -110,7 +113,6 @@
             <ul class="left-column">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Pricing</a></li>
-                <li><a href="#">Sports</a></li>
                 <li><a href="#">Products</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
@@ -130,7 +132,7 @@
             <img id="icon-instagram" src="imagenes/icon-instagram.svg" alt="">
         </div>
 
-        <img src="imagenes/logo.svg" alt="logofooter">
+        <img class="logofooter" src="imagenes/logocopia.svg" alt="logofooter">
 
         <p class="copyright">Copyright 2020. All Rights Reserved</p>
 
